--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,9 @@
     "express": "^5.1.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+  "jsonwebtoken": "^9.0.2",
+  "morgan": "^1.10.0",
+  "prisma": "^6.9.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -35,7 +36,6 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.29",
-    "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
