--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "prisma": {    "seed": "npx ts-node prisma/seed.ts"
+  "prisma": {    "seed": "node dist/prisma/seed.js"
   },
   "scripts": {
     "start": "node dist/index.js",
