feat(finanzas+recibos+rentabilidad): KPIs por período, CobroCliente CRUD+UI, overhaul Recibos, esquema 1:N Factura-Presupuesto, emails profesionales; build fixes y Docker migrate deploy

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
+SMTP_HOST=smtp.hostinger.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=avisito@misionary.com
+SMTP_PASS=7wNh/SQ7^*I
+SMTP_FROM=avisito@misionary.com
+ADMIN_EMAIL=guido@misionary.com
 # PostgreSQL
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
