--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "prisma": {    "seed": "node dist/prisma/seed.js"
+  "prisma": {
+    "seed": "node dist/prisma/seed.js"
   },
   "scripts": {
     "start": "node dist/index.js",
@@ -24,9 +25,10 @@
     "express": "^5.1.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-  "jsonwebtoken": "^9.0.2",
-  "morgan": "^1.10.0",
-  "prisma": "^6.9.0"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
+    "prisma": "^6.9.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -36,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.29",
+    "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
