--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
     "@visx/pattern": "^3.13.0-alpha.0",
+    "apexcharts": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
