Arregla Docker: soluciona error de Rollup en Alpine y configura Prisma

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,27 +1,52 @@
 ######## Backend - Build & Run (Production)
 # Stage 1: Builder (incluye devDependencies para compilar TypeScript)
-FROM node:20-alpine AS builder
+FROM node:20-slim AS builder
+
+# Instalar herramientas de compilación y OpenSSL para Prisma
+RUN apt-get update && apt-get install -y \
+    python3 \
+    make \
+    g++ \
+    openssl \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 ARG CACHEBUST=20250815-192339
 COPY package.json package-lock.json ./
-# Forzar invalidación de cache de dependencias cuando cambie CACHEBUST
-RUN echo "CACHEBUST=${CACHEBUST}" > /tmp/CACHEBUST && npm ci
+# Regenerar lockfile si está desincronizado, luego hacer npm ci
+RUN echo "CACHEBUST=${CACHEBUST}" > /tmp/CACHEBUST && \
+    (npm ci --cache=/tmp/empty-cache --prefer-offline=false || \
+     (echo "npm ci falló, regenerando lockfile con force..." && \
+      rm -f package-lock.json && \
+      npm install --package-lock-only --force --no-audit --no-fund && \
+      npm ci --force --cache=/tmp/empty-cache --prefer-offline=false))
 
 COPY . .
 # Generar Prisma Client con el schema ya copiado y luego compilar TypeScript
 RUN npx prisma generate && npm run build
 
 # Stage 2: Runner (solo dependencias de producción)
-FROM node:20-alpine AS runner
+FROM node:20-slim AS runner
+
+# Instalar OpenSSL para runtime de Prisma
+RUN apt-get update && apt-get install -y \
+    openssl \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 ENV NODE_ENV=production
 
 ARG CACHEBUST=20250815-192339
 COPY package.json package-lock.json ./
-# Forzar invalidación de cache de dependencias de runtime cuando cambie CACHEBUST
-RUN echo "CACHEBUST=${CACHEBUST}" > /tmp/CACHEBUST && npm ci --omit=dev
+# Regenerar lockfile si está desincronizado, luego hacer npm ci de producción
+RUN echo "CACHEBUST=${CACHEBUST}" > /tmp/CACHEBUST && \
+    (npm ci --omit=dev --cache=/tmp/empty-cache --prefer-offline=false || \
+     (echo "npm ci --omit=dev falló, regenerando lockfile con force..." && \
+      rm -f package-lock.json && \
+      npm install --package-lock-only --force --no-audit --no-fund && \
+      npm ci --omit=dev --force --cache=/tmp/empty-cache --prefer-offline=false))
 
 # Copiamos solo lo necesario para correr
 COPY --from=builder /app/dist ./dist
