--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^5.1.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@rollup/rollup-linux-x64-musl": "^4.46.2",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
     "@visx/pattern": "^3.13.0-alpha.0",
