--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,9 @@ COPY package.json package-lock.json ./
 # Usar npm install simple en Alpine - esto funciona sin problemas
 RUN npm install
 
+# Instalar binarios específicos para Alpine/musl (Rollup + TailwindCSS)
+RUN npm install @rollup/rollup-linux-x64-musl @tailwindcss/oxide-linux-x64-musl --force
+
 COPY . .
 
 # Pasar variable al build de Vite (prefijo VITE_)
