🔧 feat: Auth token system and provider invitation functionality
🔐 Backend Auth Enhancements:
- Add auth token provider fields to database schema
- Implement email field for auth tokens
- Create authToken service for token management
- Update auth controller with provider invitation logic
- Add new auth routes for token-based authentication
- Add nodemailer types for email functionality

🗄️ Database Migrations:
- Migration: add_auth_token_provider_fields (20250816001854)
- Migration: add_email_to_auth_token (20250816002440)
- Updated Prisma schema with new auth token fields

⚙️ Configuration Updates:
- Enhanced auth configuration settings
- Updated Docker Compose for better service integration

This update establishes the foundation for provider invitation system
and token-based authentication workflows.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - /app/node_modules
     environment:
       - VITE_API_URL=${VITE_API_URL:-http://localhost:3001/api}
-    command: sh -c "npm install --legacy-peer-deps && npm install @rollup/rollup-linux-x64-musl --force && npm run dev"
+    command: sh -c "npm install --legacy-peer-deps && npm install @rollup/rollup-linux-x64-musl @tailwindcss/oxide-linux-x64-musl lightningcss-linux-x64-musl --force && npm run dev -- --host 0.0.0.0"
 
 volumes:
   postgres_data:
