--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@rollup/rollup-linux-x64-musl": "^4.46.2",
+    "@tailwindcss/oxide-linux-x64-musl": "^4.1.12",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
     "@visx/pattern": "^3.13.0-alpha.0",
@@ -40,6 +41,7 @@
     "history": "^5.3.0",
     "html-react-parser": "^5.2.1",
     "i18next": "^24.2.0",
+    "lightningcss-linux-x64-musl": "^1.30.1",
     "lodash": "^4.17.21",
     "miragejs": "^0.1.48",
     "react": "19.0.0",
@@ -49,7 +51,7 @@
     "react-highlight-words": "^0.21.0",
     "react-hook-form": "^7.59.0",
     "react-i18next": "^15.2.0",
-    "react-icons": "5.4.0",
+    "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.3",
     "react-number-format": "^5.4.3",
@@ -57,7 +59,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "6.26.2",
     "react-scroll": "^1.9.2",
-    "react-select": "^5.9.0",
+    "react-select": "^5.10.2",
     "react-simple-maps": "4.0.0-beta.6",
     "react-syntax-highlighter": "^15.6.1",
     "react-tooltip": "^5.11.1",
